fixed navbar hrefs

--- a/preventivo.html
+++ b/preventivo.html
@@ -17,7 +17,7 @@
         <div class="gjs-grid-column" id="i8jn6i"><img src="assets/logo.png" id="ijcq4d" /></div>
         <div class="gjs-grid-column" id="i4gdn9"><a href="./index.html" class="gjs-link" id="ig70s7">Home</a><a href=""
             title="" class="gjs-link" id="i8wm5n">Prodotti<br /></a><a href="./chi-siamo.html" class="gjs-link"
-            id="ie9p1l">Chi Siamo</a><a href="./chi-siamo.html" class="gjs-link" id="i478a2">Richiedi un Preventivo</a>
+            id="ie9p1l">Chi Siamo</a><a href="./preventivo.html" class="gjs-link" id="i478a2">Richiedi un Preventivo</a>
         </div>
       </div>
     </div>
