--- a/chi-siamo.html
+++ b/chi-siamo.html
@@ -11,33 +11,48 @@
 </head>
 
 <body id="ikdroz">
-  <div title="" id="iuhgd8" class="gjs-grid-row">
-    <div id="ik4zyg" class="gjs-grid-column">
-      <div id="ixebyb" class="gjs-grid-row">
-        <div id="ijxmpq" class="gjs-grid-column"><img src="assets/logo.png" id="i0ztqk" /></div>
-        <div id="i9q8as" class="gjs-grid-column"><a href="./index.html" title="" id="iyt6tn" class="gjs-link">Home<br /></a><a
-            href="" id="ivwqrb" class="gjs-link">Prodotti</a><a href="./chi-siamo.html" id="ijr2ei" class="gjs-link">Chi
-            Siamo<br /></a><a href="./preventivo.html" id="i6mv1j" class="gjs-link">Richiedi un Preventivo</a></div>
+  <div title="" class="gjs-grid-row" id="iwxwkq">
+    <div class="gjs-grid-column" id="i5mdxf">
+      <div class="gjs-grid-row" id="i5ary2">
+        <div class="gjs-grid-column" id="i22nfg"><img src="assets/logo.png" id="iih8xj" /></div>
+        <div class="gjs-grid-column" id="i772wi"><a href="./index.html" class="gjs-link" id="i5qu6o">Home</a>
+          <div class="dropdown">
+            <a href="#" class="gjs-link" id="izje7g">Prodotti</a>
+            <div class="dropdown-content">
+              <a href="./prodotti/opzione_1.html">Opzione 1</a>
+              <a href="./prodotti/opzione_2.html">Opzione 2</a>
+              <a href="./prodotti/opzione_3.html">Opzione 3</a>
+              <a href="./prodotti/opzione_4.html">Opzione 4</a>
+              <a href="./prodotti/opzione_5.html">Opzione 5</a>
+              <a href="./prodotti/opzione_6.html">Opzione 6</a>
+              <a href="./prodotti/opzione_7.html">Opzione 7</a>
+              <a href="./prodotti/opzione_8.html">Opzione 8</a>
+            </div>
+          </div>
+          <a href="./chi-siamo.html" class="gjs-link"
+            id="ibftnn">Chi Siamo</a><a href="./preventivo.html" class="gjs-link" id="ix0gcj">Richiedi un Preventivo</a>
+        </div>
       </div>
     </div>
   </div>
   <section id="i61gei" class="gjs-section">
     <div id="iot35s" class="gjs-container">
       <div id="ibzxv4">
-        <h1 class="gjs-heading" id="it6rui">Chi Siamo<br /></h1>
-        <h3 class="gjs-heading" id="igxc2f">Richiedi gratuitamente un preventivo, lo riceverai in pochi giorni. E il
+        <h1 id="it6rui" class="gjs-heading">Chi Siamo<br /></h1>
+        <h3 id="igxc2f" class="gjs-heading">Richiedi gratuitamente un preventivo, lo riceverai in pochi giorni. E il
           sopralluogo è gratuito.</h3>
       </div>
       <div id="if8tw6" class="gjs-divider"></div><span id="iayplw">
         <p id="iysl6r">Siamo <strong id="isi205">specializzati nella produzione e vendita di serramenti in PVC e
             alluminio di alta qualità</strong> e siamo orgogliosi di offrire ai nostri clienti una vasta gamma di
           prodotti dalle <strong id="ih149k">caratteristiche tecniche eccellenti</strong>, progettati per
-          garantire <strong>comfort</strong>, <strong>sicurezza </strong>e <strong>risparmio energetico</strong>.</p>
+          garantire <strong>comfort</strong>, <strong id="imzp31">sicurezza </strong>e <strong>risparmio
+            energetico</strong>.</p>
       </span>
-      <div class="gjs-divider" id="ieqpn4"></div>
-      <div class="gjs-grid-row" id="i5yz32">
+      <div id="ieqpn4" class="gjs-divider"></div>
+      <div id="i5yz32" class="gjs-grid-row">
         <div class="gjs-grid-column"><img id="ikh7pu" src="assets/home_studio_mess.jpg" /></div>
-        <div class="gjs-grid-column" id="icu1hs">
+        <div id="icu1hs" class="gjs-grid-column">
           <div id="iff3a9">
             <p id="i6l9dg" draggable="true">La nostra azienda nasce dalla passione e dalla competenza di un gruppo di
               professionisti del settore, che si sono uniti per creare un’offerta di serramenti in grado di soddisfare
@@ -53,13 +68,13 @@
       </div>
     </div>
   </section>
-  <div class="gjs-grid-row" id="iz2rqg">
-    <div class="gjs-grid-column" id="ilxdoj">
-      <div class="gjs-grid-row" id="iopvzn">
-        <div class="gjs-grid-column" id="ikp76f"><img src="assets/logo.png" id="itvybj" /></div>
-      </div><a href="##" class="gjs-link" id="ilw5ae">Privacy Policy<br /></a>
+  <div id="iz2rqg" class="gjs-grid-row">
+    <div id="ilxdoj" class="gjs-grid-column">
+      <div id="iopvzn" class="gjs-grid-row">
+        <div id="ikp76f" class="gjs-grid-column"><img src="assets/logo.png" id="itvybj" /></div>
+      </div><a href="##" id="ilw5ae" class="gjs-link">Privacy Policy<br /></a>
       <div id="isd8tv">+39 123 456 7890<br />email@email.com<br />Via xxxxxxx, Comune, 20xxx, xxxxx</div>
-      <div class="gjs-text-blue" id="iq6cpl">Copyright © YEAR Company name</div>
+      <div id="iq6cpl" class="gjs-text-blue">Copyright © YEAR Company name</div>
     </div>
   </div>
 </body>
