--- a/preventivo.html
+++ b/preventivo.html
@@ -11,31 +11,45 @@
 </head>
 
 <body id="ilnzsp">
-  <div title="" class="gjs-grid-row" id="io5dr3">
-    <div class="gjs-grid-column" id="ifmkmg">
-      <div class="gjs-grid-row" id="ihey6e">
-        <div class="gjs-grid-column" id="i8jn6i"><img src="assets/logo.png" id="ijcq4d" /></div>
-        <div class="gjs-grid-column" id="i4gdn9"><a href="./index.html" class="gjs-link" id="ig70s7">Home</a><a href=""
-            title="" class="gjs-link" id="i8wm5n">Prodotti<br /></a><a href="./chi-siamo.html" class="gjs-link"
-            id="ie9p1l">Chi Siamo</a><a href="./preventivo.html" class="gjs-link" id="i478a2">Richiedi un Preventivo</a>
+  <div title="" class="gjs-grid-row" id="igwask">
+    <div class="gjs-grid-column" id="ijiyjv">
+      <div class="gjs-grid-row" id="izdo6f">
+        <div class="gjs-grid-column" id="iwjkhi"><img src="assets/logo.png" id="iy95bj" /></div>
+        <div class="gjs-grid-column" id="iw1eqo">
+          <a href="./index.html" class="gjs-link" id="izyhy6">Home</a>
+          <div class="dropdown">
+            <a href="#" class="gjs-link" id="izje7g">Prodotti</a>
+            <div class="dropdown-content">
+              <a href="./prodotti/opzione_1.html">Opzione 1</a>
+              <a href="./prodotti/opzione_2.html">Opzione 2</a>
+              <a href="./prodotti/opzione_3.html">Opzione 3</a>
+              <a href="./prodotti/opzione_4.html">Opzione 4</a>
+              <a href="./prodotti/opzione_5.html">Opzione 5</a>
+              <a href="./prodotti/opzione_6.html">Opzione 6</a>
+              <a href="./prodotti/opzione_7.html">Opzione 7</a>
+              <a href="./prodotti/opzione_8.html">Opzione 8</a>
+            </div>
+          </div>
+          <a href="./chi-siamo.html" class="gjs-link" id="ihjofe">Chi Siamo</a>
+          <a href="./preventivo.html" class="gjs-link" id="iqs4fe">Richiedi un Preventivo</a>
         </div>
       </div>
     </div>
   </div>
   <section id="ij8c4t" class="gjs-section">
-    <div class="gjs-container" id="icrneh">
+    <div id="icrneh" class="gjs-container">
       <div id="ieub0r">
-        <h1 id="inppro">Richiedi il tuo preventivo<br /></h1>
-        <h3 id="ikkdaf">Richiedi gratuitamente un preventivo, lo riceverai in pochi giorni. E il sopralluogo è gratuito.
-        </h3>
+        <h1 id="inppro" class="gjs-heading">Richiedi il tuo preventivo<br /></h1>
+        <h3 id="ikkdaf" class="gjs-heading">Richiedi gratuitamente un preventivo, lo riceverai in pochi giorni. E il
+          sopralluogo è gratuito.</h3>
       </div>
       <div id="ift2ax">
         <div role="tablist" class="tab-container">
-          <div role="tab" aria-controls="iiwa14" id="iifdru" class="tab"><span id="ie7h8o">Privato<br /></span></div>
-          <div role="tab" aria-controls="ijs7ai" id="icf19d" class="tab"><span id="iq1ev3">Azienda<br /></span></div>
+          <button onclick="showForm('privato')" class="tab" id="tabPrivato">Privato</button>
+          <button onclick="showForm('azienda')" class="tab" id="tabAzienda">Azienda</button>
         </div>
         <div id="iu9jx2" class="tab-contents">
-          <div role="tabpanel" id="iiwa14" aria-labelledby="iifdru" hidden class="tab-content">
+          <div role="tabpanel" id="formPrivato" class="tab-content">
             <form method="get" id="itv1vf">
               <div id="iql48l"><label id="i4or7g">Nome           </label><input type="text" id="idza4x" /></div>
               <div id="ik5y4v"><label id="i40l1r">Cognome     </label><input type="text" id="i37oij" /></div>
@@ -46,7 +60,7 @@
               <div id="i3dagr"><button type="button" id="irk87g">Invia<br /></button></div>
             </form>
           </div>
-          <div role="tabpanel" id="ijs7ai" aria-labelledby="icf19d" hidden class="tab-content">
+          <div role="tabpanel" id="formAzienda" class="tab-content">
             <form method="get" id="itxqbr">
               <div id="ibyn1d"><label id="ilhtan">Nome Azienda  </label><input type="text" id="izekwt" /></div>
               <div id="iiv6ku"><label id="i1ozfh">P. IVA                </label><input type="text" id="iz3e8a" /></div>
@@ -59,15 +73,32 @@
       </div>
     </div>
   </section>
-  <div class="gjs-grid-row" id="i7gkw1">
-    <div class="gjs-grid-column" id="i63b2i">
-      <div class="gjs-grid-row" id="iksysv">
-        <div class="gjs-grid-column" id="i0l6m5"><img src="assets/logo.png" id="iyd1cb" /></div>
-      </div><a href="##" class="gjs-link" id="iej0i6">Privacy Policy<br /></a>
+  <div id="i7gkw1" class="gjs-grid-row">
+    <div id="i63b2i" class="gjs-grid-column">
+      <div id="iksysv" class="gjs-grid-row">
+        <div id="i0l6m5" class="gjs-grid-column"><img src="assets/logo.png" id="iyd1cb" /></div>
+      </div><a href="##" id="iej0i6" class="gjs-link">Privacy Policy<br /></a>
       <div id="ivkctt">+39 123 456 7890<br />email@email.com<br />Via xxxxxxx, Comune, 20xxx, xxxxx</div>
-      <div class="gjs-text-blue" id="iffjg1">Copyright © YEAR Company name</div>
+      <div id="iffjg1" class="gjs-text-blue">Copyright © YEAR Company name</div>
     </div>
   </div>
+  <script>
+    // Funzione per mostrare il form corretto
+    function showForm(type) {
+      document.getElementById('formPrivato').classList.remove('active');
+      document.getElementById('formAzienda').classList.remove('active');
+      document.getElementById('tabPrivato').classList.remove('tab-active');
+      document.getElementById('tabAzienda').classList.remove('tab-active');
+      
+      if (type === 'privato') {
+        document.getElementById('formPrivato').classList.add('active');
+        document.getElementById('tabPrivato').classList.add('tab-active');
+      } else if (type === 'azienda') {
+        document.getElementById('formAzienda').classList.add('active');
+        document.getElementById('tabAzienda').classList.add('tab-active');
+      }
+    }
+  </script>
 </body>
 
 </html>
