--- a/chi-siamo.html
+++ b/chi-siamo.html
@@ -11,29 +11,32 @@
 </head>
 
 <body id="ikdroz">
-  <div title="" class="gjs-grid-row" id="iwxwkq">
-    <div class="gjs-grid-column" id="i5mdxf">
-      <div class="gjs-grid-row" id="i5ary2">
-        <div class="gjs-grid-column" id="i22nfg"><img src="assets/logo.png" id="iih8xj" /></div>
-        <div class="gjs-grid-column" id="i772wi"><a href="./index.html" class="gjs-link" id="i5qu6o">Home</a>
-          <div class="dropdown">
-            <a href="#" class="gjs-link" id="izje7g">Prodotti</a>
-            <div class="dropdown-content">
-              <a href="./prodotti/opzione_1.html">Opzione 1</a>
-              <a href="./prodotti/opzione_2.html">Opzione 2</a>
-              <a href="./prodotti/opzione_3.html">Opzione 3</a>
-              <a href="./prodotti/opzione_4.html">Opzione 4</a>
-              <a href="./prodotti/opzione_5.html">Opzione 5</a>
-              <a href="./prodotti/opzione_6.html">Opzione 6</a>
-              <a href="./prodotti/opzione_7.html">Opzione 7</a>
-              <a href="./prodotti/opzione_8.html">Opzione 8</a>
+  <div id="i6po" title="" class="gjs-grid-row">
+    <div id="itjq" class="gjs-grid-column">
+      <div id="iyd2" class="gjs-grid-row">
+        <div id="iqjl" class="gjs-grid-column"><img src="assets/logo.png" id="i9b81j" /></div>
+          <button id="burger-menu" class="burger-menu">&#9776;</button>
+          <div id="navbar-links" class="navbar-links">
+            <div id="id7x" class="gjs-grid-column"><a id="i5qu6o" href="./index.html" class="gjs-link">Home</a>
+              <div class="dropdown">
+                <a href="#" class="gjs-link" id="izje7g">Prodotti</a>
+                <div class="dropdown-content">
+                  <a href="./prodotti/opzione_1.html">Opzione 1</a>
+                  <a href="./prodotti/opzione_2.html">Opzione 2</a>
+                  <a href="./prodotti/opzione_3.html">Opzione 3</a>
+                  <a href="./prodotti/opzione_4.html">Opzione 4</a>
+                  <a href="./prodotti/opzione_5.html">Opzione 5</a>
+                  <a href="./prodotti/opzione_6.html">Opzione 6</a>
+                  <a href="./prodotti/opzione_7.html">Opzione 7</a>
+                  <a href="./prodotti/opzione_8.html">Opzione 8</a>
+                </div>
+              </div>
+              <a id="ibftnn" href="./chi-siamo.html" class="gjs-link">Chi Siamo</a>
+              <a href="./preventivo.html" id="iqbgt2" class="gjs-link">Richiedi un Preventivo</a>
             </div>
           </div>
-          <a href="./chi-siamo.html" class="gjs-link"
-            id="ibftnn">Chi Siamo</a><a href="./preventivo.html" class="gjs-link" id="ix0gcj">Richiedi un Preventivo</a>
         </div>
       </div>
-    </div>
   </div>
   <section id="i61gei" class="gjs-section">
     <div id="iot35s" class="gjs-container">
@@ -77,6 +80,9 @@
       <div id="iq6cpl" class="gjs-text-blue">Copyright © YEAR Company name</div>
     </div>
   </div>
+  <script src="script.js">
+
+  </script>
 </body>
 
 </html>
