--- a/preventivo.html
+++ b/preventivo.html
@@ -11,30 +11,36 @@
 </head>
 
 <body id="ilnzsp">
-  <div title="" class="gjs-grid-row" id="igwask">
-    <div class="gjs-grid-column" id="ijiyjv">
-      <div class="gjs-grid-row" id="izdo6f">
-        <div class="gjs-grid-column" id="iwjkhi"><img src="assets/logo.png" id="iy95bj" /></div>
-        <div class="gjs-grid-column" id="iw1eqo">
-          <a href="./index.html" class="gjs-link" id="izyhy6">Home</a>
-          <div class="dropdown">
-            <a href="#" class="gjs-link" id="izje7g">Prodotti</a>
-            <div class="dropdown-content">
-              <a href="./prodotti/opzione_1.html">Opzione 1</a>
-              <a href="./prodotti/opzione_2.html">Opzione 2</a>
-              <a href="./prodotti/opzione_3.html">Opzione 3</a>
-              <a href="./prodotti/opzione_4.html">Opzione 4</a>
-              <a href="./prodotti/opzione_5.html">Opzione 5</a>
-              <a href="./prodotti/opzione_6.html">Opzione 6</a>
-              <a href="./prodotti/opzione_7.html">Opzione 7</a>
-              <a href="./prodotti/opzione_8.html">Opzione 8</a>
+  <div id="i6po" title="" class="gjs-grid-row">
+    <div id="itjq" class="gjs-grid-column">
+      <div id="iyd2" class="gjs-grid-row">
+        <div id="iqjl" class="gjs-grid-column"><img src="assets/logo.png" id="i9b81j" /></div>
+          <button id="burger-menu" class="burger-menu">&#9776;</button>
+          <div id="navbar-links" class="navbar-links">
+            <a href="./index.html" class="gjs-link" id="izyhy6">Home</a>
+
+              <div class="dropdown">
+                <a href="#" class="gjs-link" id="izje7g">Prodotti</a>
+                
+                <div class="dropdown-content">
+                  <a href="./prodotti/opzione_1.html">Opzione 1</a>
+                  <a href="./prodotti/opzione_2.html">Opzione 2</a>
+                  <a href="./prodotti/opzione_3.html">Opzione 3</a>
+                  <a href="./prodotti/opzione_4.html">Opzione 4</a>
+                  <a href="./prodotti/opzione_5.html">Opzione 5</a>
+                  <a href="./prodotti/opzione_6.html">Opzione 6</a>
+                  <a href="./prodotti/opzione_7.html">Opzione 7</a>
+                  <a href="./prodotti/opzione_8.html">Opzione 8</a>
+                </div>
+              </div>
+              <a href="./chi-siamo.html" class="gjs-link" id="i88iz">Chi Siamo</a>
+              <a href="./preventivo.html" class="gjs-link" id="iqs4fe">Richiedi un Preventivo</a>
+
+              
             </div>
           </div>
-          <a href="./chi-siamo.html" class="gjs-link" id="ihjofe">Chi Siamo</a>
-          <a href="./preventivo.html" class="gjs-link" id="iqs4fe">Richiedi un Preventivo</a>
         </div>
       </div>
-    </div>
   </div>
   <section id="ij8c4t" class="gjs-section">
     <div id="icrneh" class="gjs-container">
@@ -99,6 +105,9 @@
       }
     }
   </script>
+   <script src="script.js">
+
+   </script>
 </body>
 
 </html>
