--- a/prodotti/opzione_1.html
+++ b/prodotti/opzione_1.html
@@ -11,29 +11,34 @@
 </head>
 
 <body id="i4275f">
-  <div title="" class="gjs-grid-row" id="ipn941">
-    <div class="gjs-grid-column" id="i9ik1m">
-      <div class="gjs-grid-row" id="iygtsj">
-        <div class="gjs-grid-column" id="i45dzx"><img src="../assets/logo.png" id="i7qomt"/></div>
-        <div class="gjs-grid-column" id="iqk5kh"><a href="../index.html" class="gjs-link" id="izje7g">Home</a>
-            <div class="dropdown">
+  <div id="i6po" title="" class="gjs-grid-row">
+    <div id="itjq" class="gjs-grid-column">
+      <div id="iyd2" class="gjs-grid-row">
+        <div id="iqjl" class="gjs-grid-column"><img src="../assets/logo.png" id="i9b81j" /></div>
+          <button id="burger-menu" class="burger-menu">&#9776;</button>
+          <div id="navbar-links" class="navbar-links">
+            <div id="id7x" class="gjs-grid-column"><a id="izyhy6" href="./index.html" class="gjs-link">Home</a>
+              <div class="dropdown">
                 <a href="#" class="gjs-link" id="i0v68l">Prodotti</a>
                 <div class="dropdown-content">
-                  <a href="./opzione_1.html">Opzione 1</a>
-                  <a href="./opzione_2.html">Opzione 2</a>
-                  <a href="./opzione_3.html">Opzione 3</a>
-                  <a href="./opzione_4.html">Opzione 4</a>
-                  <a href="./opzione_5.html">Opzione 5</a>
-                  <a href="./opzione_6.html">Opzione 6</a>
-                  <a href="./opzione_7.html">Opzione 7</a>
-                  <a href="./opzione_8.html">Opzione 8</a>
+                  <a href="./prodotti/opzione_1.html">Opzione 1</a>
+                  <a href="./prodotti/opzione_2.html">Opzione 2</a>
+                  <a href="./prodotti/opzione_3.html">Opzione 3</a>
+                  <a href="./prodotti/opzione_4.html">Opzione 4</a>
+                  <a href="./prodotti/opzione_5.html">Opzione 5</a>
+                  <a href="./prodotti/opzione_6.html">Opzione 6</a>
+                  <a href="./prodotti/opzione_7.html">Opzione 7</a>
+                  <a href="./prodotti/opzione_8.html">Opzione 8</a>
                 </div>
               </div>
-        <a href="../chi-siamo.html" class="gjs-link" id="ivj8ba">Chi Siamo</a><a href="../preventivo.html" class="gjs-link" id="imx80i">Richiedi un Preventivo</a>
+              <a id="i88iz" href="./chi-siamo.html" class="gjs-link">Chi Siamo</a>
+              <a href="./preventivo.html" id="iqbgt2" class="gjs-link">Richiedi un Preventivo</a>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
   </div>
+
   <section class="gjs-section" id="i7cjpx">
     <div class="gjs-container" id="is3tnw">
       <div class="gjs-grid-row" id="ijtkpa">
@@ -81,6 +86,9 @@
       <div class="gjs-text-blue" id="ib5sui">Copyright © YEAR Company name</div>
     </div>
   </div>
+  <script src="../script.js">
+
+  </script>
 </body>
 
 </html>
