--- a/preventivo.html
+++ b/preventivo.html
@@ -11,17 +11,16 @@
 </head>
 
 <body id="ilnzsp">
-  <div id="i6po" title="" class="gjs-grid-row">
-    <div id="itjq" class="gjs-grid-column">
-      <div id="iyd2" class="gjs-grid-row">
-        <div id="iqjl" class="gjs-grid-column"><img src="assets/logo.png" id="i9b81j" /></div>
+  <div id="i11dnf" title="" class="gjs-grid-row">
+    <div id="i4ksqg" class="gjs-grid-column">
+      <div id="i329hh" class="gjs-grid-row">
+        <div id="idohoo" class="gjs-grid-column"><img src="assets/logo.png" id="isr5m8" /></div>
           <button id="burger-menu" class="burger-menu">&#9776;</button>
           <div id="navbar-links" class="navbar-links">
-            <a href="./index.html" class="gjs-link" id="izyhy6">Home</a>
-
+            <div id="iuv2qw" class="gjs-grid-column">
+              <a id="izyhy6" href="./index.html" class="gjs-link">Home</a>
               <div class="dropdown">
-                <a href="#" class="gjs-link" id="izje7g">Prodotti</a>
-                
+                <a href="#" class="gjs-link" id="i5pkeq">Prodotti</a>
                 <div class="dropdown-content">
                   <a href="./prodotti/opzione_1.html">Opzione 1</a>
                   <a href="./prodotti/opzione_2.html">Opzione 2</a>
@@ -33,10 +32,8 @@
                   <a href="./prodotti/opzione_8.html">Opzione 8</a>
                 </div>
               </div>
-              <a href="./chi-siamo.html" class="gjs-link" id="i88iz">Chi Siamo</a>
-              <a href="./preventivo.html" class="gjs-link" id="iqs4fe">Richiedi un Preventivo</a>
-
-              
+              <a id="iqdbl8" href="./chi-siamo.html" class="gjs-link">Chi Siamo</a>
+              <a href="./preventivo.html" id="iqs4fe" class="gjs-link">Richiedi un Preventivo</a>
             </div>
           </div>
         </div>
@@ -88,6 +85,7 @@
       <div id="iffjg1" class="gjs-text-blue">Copyright © YEAR Company name</div>
     </div>
   </div>
+</body>
   <script>
     // Funzione per mostrare il form corretto
     function showForm(type) {
@@ -108,6 +106,5 @@
    <script src="script.js">
 
    </script>
-</body>
 
 </html>
