--- a/index.html
+++ b/index.html
@@ -13,15 +13,16 @@
 </head>
 
 <body id="iau9">
-  <div id="i6po" title="" class="gjs-grid-row">
-    <div id="itjq" class="gjs-grid-column">
-      <div id="iyd2" class="gjs-grid-row">
-        <div id="iqjl" class="gjs-grid-column"><img src="assets/logo.png" id="i9b81j" /></div>
+  <div id="i11dnf" title="" class="gjs-grid-row">
+    <div id="i4ksqg" class="gjs-grid-column">
+      <div id="i329hh" class="gjs-grid-row">
+        <div id="idohoo" class="gjs-grid-column"><img src="assets/logo.png" id="isr5m8" /></div>
           <button id="burger-menu" class="burger-menu">&#9776;</button>
           <div id="navbar-links" class="navbar-links">
-            <div id="id7x" class="gjs-grid-column"><a id="icfyb" href="./index.html" class="gjs-link">Home</a>
+            <div id="iuv2qw" class="gjs-grid-column">
+              <a id="i2rxml" href="./index.html" class="gjs-link">Home</a>
               <div class="dropdown">
-                <a href="#" class="gjs-link" id="izje7g">Prodotti</a>
+                <a href="#" class="gjs-link" id="i5pkeq">Prodotti</a>
                 <div class="dropdown-content">
                   <a href="./prodotti/opzione_1.html">Opzione 1</a>
                   <a href="./prodotti/opzione_2.html">Opzione 2</a>
@@ -33,24 +34,20 @@
                   <a href="./prodotti/opzione_8.html">Opzione 8</a>
                 </div>
               </div>
-              <a id="i88iz" href="./chi-siamo.html" class="gjs-link">Chi Siamo</a>
-              <a href="./preventivo.html" id="iqbgt2" class="gjs-link">Richiedi un Preventivo</a>
+              <a id="iqdbl8" href="./chi-siamo.html" class="gjs-link">Chi Siamo</a>
+              <a href="./preventivo.html" id="ijqttx" class="gjs-link">Richiedi un Preventivo</a>
             </div>
           </div>
         </div>
       </div>
   </div>
-  <div id="irz7b" class="gjs-grid-row">
-    <div id="iycz3" class="gjs-grid-column">
-      <div id="itndw" class="text-main-content">SERRAMENTI DI ALTA QUALITÀ<br /></div><img id="ie1vsv"
-        src="assets/attorney_1.png" />
-    </div>
-  </div>
+  <div id="irz7b" class="gjs-grid-row"></div>
   <section id="ifkor4" class="gjs-section">
     <div class="gjs-container">
       <div id="ivw14l" class="gjs-grid-row">
-        <div class="gjs-grid-column"><img id="ilqwjr" src="assets/home_studio_mess.jpg" /></div>
-        <div id="ifp6yj" class="gjs-grid-column"><a style="border-radius: 25px; border-width: 2px; border-style: solid;" type="button" class="gjs-link" id="ixhqww" href="preventivo.html"><span>Clicca qui per richiedere un preventivo</span></a>
+        <div id="icspb" class="gjs-grid-column"><img id="ilqwjr" src="assets/home_studio_mess.jpg" /></div>
+        <div id="ifp6yj" class="gjs-grid-column"><button type="button" id="ixhqww">Clicca qui per richiedere un
+            preventivo</button>
           <div id="ihz44h">
             <div id="iahdlt" class="wp-block-group step">
               <div id="ifwve4"
