--- a/prodotti/opzione_1.html
+++ b/prodotti/opzione_1.html
@@ -11,15 +11,16 @@
 </head>
 
 <body id="i4275f">
-  <div id="i6po" title="" class="gjs-grid-row">
-    <div id="itjq" class="gjs-grid-column">
-      <div id="iyd2" class="gjs-grid-row">
-        <div id="iqjl" class="gjs-grid-column"><img src="../assets/logo.png" id="i9b81j" /></div>
+  <div id="i11dnf" title="" class="gjs-grid-row">
+    <div id="i4ksqg" class="gjs-grid-column">
+      <div id="i329hh" class="gjs-grid-row">
+        <div id="idohoo" class="gjs-grid-column"><img src="../assets/logo.png" id="isr5m8" /></div>
           <button id="burger-menu" class="burger-menu">&#9776;</button>
           <div id="navbar-links" class="navbar-links">
-            <div id="id7x" class="gjs-grid-column"><a id="izyhy6" href="./index.html" class="gjs-link">Home</a>
+            <div id="iuv2qw" class="gjs-grid-column">
+              <a id="izyhy6" href="./index.html" class="gjs-link">Home</a>
               <div class="dropdown">
-                <a href="#" class="gjs-link" id="i0v68l">Prodotti</a>
+                <a href="#" class="gjs-link" id="itiwuq">Prodotti</a>
                 <div class="dropdown-content">
                   <a href="./prodotti/opzione_1.html">Opzione 1</a>
                   <a href="./prodotti/opzione_2.html">Opzione 2</a>
@@ -31,8 +32,8 @@
                   <a href="./prodotti/opzione_8.html">Opzione 8</a>
                 </div>
               </div>
-              <a id="i88iz" href="./chi-siamo.html" class="gjs-link">Chi Siamo</a>
-              <a href="./preventivo.html" id="iqbgt2" class="gjs-link">Richiedi un Preventivo</a>
+              <a id="iqdbl8" href="./chi-siamo.html" class="gjs-link">Chi Siamo</a>
+              <a href="./preventivo.html" id="ijqttx" class="gjs-link">Richiedi un Preventivo</a>
             </div>
           </div>
         </div>
