mobile-support+privacypolicy

--- a/chi-siamo.html
+++ b/chi-siamo.html
@@ -43,8 +43,6 @@
     <div id="iot35s" class="gjs-container">
       <div id="ibzxv4">
         <h1 id="it6rui" class="gjs-heading">Chi Siamo<br /></h1>
-        <h3 id="igxc2f" class="gjs-heading">Richiedi gratuitamente un preventivo, lo riceverai in pochi giorni. E il
-          sopralluogo è gratuito.</h3>
       </div>
       <div id="if8tw6" class="gjs-divider"></div><span id="iayplw">
         <p id="iysl6r">Siamo <strong id="isi205">specializzati nella produzione e vendita di serramenti in PVC e
@@ -55,28 +53,24 @@
       </span>
       <div id="ieqpn4" class="gjs-divider"></div>
       <div id="i5yz32" class="gjs-grid-row">
-        <div class="gjs-grid-column"><img id="ikh7pu" src="assets/home_studio_mess.jpg" /></div>
-        <div id="icu1hs" class="gjs-grid-column">
-          <div id="iff3a9">
-            <p id="i6l9dg" draggable="true">La nostra azienda nasce dalla passione e dalla competenza di un gruppo di
-              professionisti del settore, che si sono uniti per creare un’offerta di serramenti in grado di soddisfare
-              le esigenze dei clienti privati e delle aziende. La combinazione di tecnologie all’avanguardia, materiali
-              di qualità e un servizio personalizzato ci permette di garantire la massima soddisfazione ai nostri
-              clienti.</p>
-            <p id="imdt9t" draggable="true" class="gjs-hovered">Ci distingue la grande attenzione per i dettagli e la
-              cura nella scelta dei materiali, che ci consente di offrire serramenti durevoli nel tempo e in grado di
-              resistere alle intemperie. Naturalmente la nostra produzione rispetta tutte le normative europee in
-              materia di sicurezza e di rispetto dell’ambiente.</p>
-          </div>
+        <div class="gjs-grid-column">
+            <img id="ikh7pu" src="assets/chisiamo.png" alt="Chi siamo" />
         </div>
-      </div>
+        <div id="icu1hs" class="gjs-grid-column">
+            <div id="iff3a9">
+                <p id="i6l9dg" draggable="true">La nostra azienda nasce dalla <strong>passione</strong> e dall’<strong>esperienza</strong> di un team di professionisti del settore, uniti con l’obiettivo di offrire serramenti che soddisfino le esigenze sia dei clienti <strong>privati</strong> che delle <strong>aziende</strong>. Grazie all’impiego di <strong>tecnologie avanzate</strong>, materiali di alta qualità e un servizio <strong>personalizzato</strong>, siamo in grado di garantire la massima <strong>soddisfazione</strong>.</p>
+                <p id="imdt9t" draggable="true" class="gjs-hovered">Ci contraddistingue una cura meticolosa dei <strong>dettagli</strong> e una selezione accurata dei <strong>materiali</strong>, che ci permette di produrre serramenti <strong>resistenti</strong> nel tempo e in grado di affrontare le <strong>intemperie</strong>. La nostra produzione è inoltre conforme alle normative <strong>europee</strong> in materia di <strong>sicurezza</strong> e <strong>sostenibilità ambientale</strong>.</p>
+            </div>
+        </div>
+    </div>
+    </div>
     </div>
   </section>
   <div id="iz2rqg" class="gjs-grid-row">
     <div id="ilxdoj" class="gjs-grid-column">
       <div id="iopvzn" class="gjs-grid-row">
         <div id="ikp76f" class="gjs-grid-column"><img src="assets/logo.png" id="itvybj" /></div>
-      </div><a href="##" id="ilw5ae" class="gjs-link">Privacy Policy<br /></a>
+      </div><a href="./privacyp.html" id="ilw5ae" class="gjs-link">Privacy Policy<br /></a>
       <div id="isd8tv">+39 123 456 7890<br />email@email.com<br />Via xxxxxxx, Comune, 20xxx, xxxxx</div>
       <div id="iq6cpl" class="gjs-text-blue">Copyright © YEAR Company name</div>
     </div>
