--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@
     <div class="gjs-container">
       <div id="ivw14l" class="gjs-grid-row">
         <div id="icspb" class="gjs-grid-column"><img id="ilqwjr" src="assets/home_studio_mess.jpg" /></div>
-        <div id="ifp6yj" class="gjs-grid-column"><button type="button" id="ixhqww">Clicca qui per richiedere un
-            preventivo</button>
+        <div id="ifp6yj" class="gjs-grid-column"><button class="tab" onclick="window.location.href='./preventivo.html'">
+          Clicca qui per richiedere un preventivo
+      </button>
           <div id="ihz44h">
             <div id="iahdlt" class="wp-block-group step">
               <div id="ifwve4"
@@ -121,7 +122,7 @@
     <div id="ilriti" class="gjs-grid-column">
       <div id="im0rle" class="gjs-grid-row">
         <div id="iotp6j" class="gjs-grid-column"><img id="ie8w0v" src="assets/logo.png" /></div>
-      </div><a id="ikj01e" href="##" class="gjs-link">Privacy Policy<br /></a>
+      </div><a id="ikj01e" href="privacyp.html" class="gjs-link">Privacy Policy<br /></a>
       <div id="ibgmbr">+39 123 456 7890<br />email@email.com<br />Via xxxxxxx, Comune, 20xxx, xxxxx</div>
       <div id="it6g1v" class="gjs-text-blue">Copyright © YEAR Company name</div>
     </div>
