--- a/preventivo.html
+++ b/preventivo.html
@@ -59,7 +59,7 @@
               <div id="imu8tg"><label id="i7bff7">Email           </label><input type="email" id="in6cah" /></div>
               <div id="iffrjg"><label id="iqqdr1">Cellulare      </label><input type="email" id="iaczs7" /></div>
               <div id="itw9qg"><label id="i945mf">Via               </label><input type="email" id="i9asv2" /></div>
-              <div id="iveg7v"><label id="ibxeug">Residenza     </label><input type="email" id="ieg0q3" /></div>
+              <div id="iveg7v"><label id="ibxeug">Residenza    </label><input type="email" id="ieg0q3" /></div>
               <div id="i3dagr"><button type="button" id="irk87g">Invia<br /></button></div>
             </form>
           </div>
@@ -67,7 +67,7 @@
             <form method="get" id="itxqbr">
               <div id="ibyn1d"><label id="ilhtan">Nome Azienda  </label><input type="text" id="izekwt" /></div>
               <div id="iiv6ku"><label id="i1ozfh">P. IVA                </label><input type="text" id="iz3e8a" /></div>
-              <div id="i5kcpl"><label id="icqi0h">Residenza          </label><input type="email" id="iov10w" /></div>
+              <div id="i5kcpl"><label id="icqi0h">Residenza         </label><input type="email" id="iov10w" /></div>
               <div id="i5w2hc"><label id="i05z0x">Cellulare           </label><input type="email" id="i4rjd8" /></div>
               <div id="ijp1dm"><button type="button" id="i6hhao">Invia<br /></button></div>
             </form>
@@ -80,7 +80,7 @@
     <div id="i63b2i" class="gjs-grid-column">
       <div id="iksysv" class="gjs-grid-row">
         <div id="i0l6m5" class="gjs-grid-column"><img src="assets/logo.png" id="iyd1cb" /></div>
-      </div><a href="##" id="iej0i6" class="gjs-link">Privacy Policy<br /></a>
+      </div><a href="./privacyp.html" id="iej0i6" class="gjs-link">Privacy Policy<br /></a>
       <div id="ivkctt">+39 123 456 7890<br />email@email.com<br />Via xxxxxxx, Comune, 20xxx, xxxxx</div>
       <div id="iffjg1" class="gjs-text-blue">Copyright © YEAR Company name</div>
     </div>
