--- a/prodotti/opzione_1.html
+++ b/prodotti/opzione_1.html
@@ -18,7 +18,7 @@
           <button id="burger-menu" class="burger-menu">&#9776;</button>
           <div id="navbar-links" class="navbar-links">
             <div id="iuv2qw" class="gjs-grid-column">
-              <a id="izyhy6" href="./index.html" class="gjs-link">Home</a>
+              <a id="izyhy6" href="../index.html" class="gjs-link">Home</a>
               <div class="dropdown">
                 <a href="#" class="gjs-link" id="itiwuq">Prodotti</a>
                 <div class="dropdown-content">
@@ -32,8 +32,8 @@
                   <a href="./prodotti/opzione_8.html">Opzione 8</a>
                 </div>
               </div>
-              <a id="iqdbl8" href="./chi-siamo.html" class="gjs-link">Chi Siamo</a>
-              <a href="./preventivo.html" id="ijqttx" class="gjs-link">Richiedi un Preventivo</a>
+              <a id="iqdbl8" href="../chi-siamo.html" class="gjs-link">Chi Siamo</a>
+              <a href="../preventivo.html" id="ijqttx" class="gjs-link">Richiedi un Preventivo</a>
             </div>
           </div>
         </div>
