--- a/chi-siamo.html
+++ b/chi-siamo.html
@@ -22,14 +22,14 @@
               <div class="dropdown">
                 <a href="#" class="gjs-link" id="i5pkeq">Prodotti</a>
                 <div class="dropdown-content">
-                  <a href="./prodotti/opzione_1.html">Opzione 1</a>
-                  <a href="./prodotti/opzione_2.html">Opzione 2</a>
-                  <a href="./prodotti/opzione_3.html">Opzione 3</a>
-                  <a href="./prodotti/opzione_4.html">Opzione 4</a>
-                  <a href="./prodotti/opzione_5.html">Opzione 5</a>
-                  <a href="./prodotti/opzione_6.html">Opzione 6</a>
-                  <a href="./prodotti/opzione_7.html">Opzione 7</a>
-                  <a href="./prodotti/opzione_8.html">Opzione 8</a>
+                  <a href="./prodotti/opzione_1.html">Serramenti PVC</a>
+                  <a href="./prodotti/opzione_2.html">Serramenti in Legno</a>
+                  <a href="./prodotti/opzione_3.html">Serramenti Alluminio</a>
+                  <a href="./prodotti/opzione_4.html">Avvolgibili</a>
+                  <a href="./prodotti/opzione_5.html">Porte Interne</a>
+                  <a href="./prodotti/opzione_6.html">Porte Blindate</a>
+                  <a href="./prodotti/opzione_7.html">Zanzariere</a>
+                  <a href="./prodotti/opzione_8.html">Persiane</a>
                 </div>
               </div>
               <a id="ibftnn" href="./chi-siamo.html" class="gjs-link">Chi Siamo</a>
