--- a/prodotti/opzione_1.html
+++ b/prodotti/opzione_1.html
@@ -22,14 +22,14 @@
               <div class="dropdown">
                 <a href="#" class="gjs-link" id="itiwuq">Prodotti</a>
                 <div class="dropdown-content">
-                  <a href="./prodotti/opzione_1.html">Opzione 1</a>
-                  <a href="./prodotti/opzione_2.html">Opzione 2</a>
-                  <a href="./prodotti/opzione_3.html">Opzione 3</a>
-                  <a href="./prodotti/opzione_4.html">Opzione 4</a>
-                  <a href="./prodotti/opzione_5.html">Opzione 5</a>
-                  <a href="./prodotti/opzione_6.html">Opzione 6</a>
-                  <a href="./prodotti/opzione_7.html">Opzione 7</a>
-                  <a href="./prodotti/opzione_8.html">Opzione 8</a>
+                  <a href="./prodotti/opzione_1.html">Serramenti PVC</a>
+                  <a href="./prodotti/opzione_2.html">Serramenti in Legno</a>
+                  <a href="./prodotti/opzione_3.html">Serramenti Alluminio</a>
+                  <a href="./prodotti/opzione_4.html">Avvolgibili</a>
+                  <a href="./prodotti/opzione_5.html">Porte Interne</a>
+                  <a href="./prodotti/opzione_6.html">Porte Blindate</a>
+                  <a href="./prodotti/opzione_7.html">Zanzariere</a>
+                  <a href="./prodotti/opzione_8.html">Persiane</a>
                 </div>
               </div>
               <a id="iqdbl8" href="../chi-siamo.html" class="gjs-link">Chi Siamo</a>
@@ -42,41 +42,45 @@
 
   <section class="gjs-section" id="i7cjpx">
     <div class="gjs-container" id="is3tnw">
-      <div class="gjs-grid-row" id="ijtkpa">
-        <div class="gjs-grid-column" id="ixmeph"><img id="id6h6d" src="../assets/galean_s_8000_serramenti_in_pvc_3.jpg"/>
-          <div id="i1bv0j">PRODOTTO 1<br/></div>
-          <div id="if5out">da 222€/mq</div>
-          <div id="ij5fmq">Categoria 1</div><button type="button" id="ivmcsi">SCOPRI DI PIU'</button>
-        </div>
-        <div class="gjs-grid-column" id="ivgk8g"><img src="../assets/galean_s_8000_serramenti_in_pvc_3.jpg" id="iy4rmo"/>
-          <div id="id0cdc">PRODOTTO 2<br/></div>
-          <div id="isov2l">da 222€/mq</div>
-          <div id="idprxk">Categoria 1</div><button type="button" id="i1g1hy">SCOPRI DI PIU'</button>
-        </div>
-        <div class="gjs-grid-column" id="iv2vc7"><img src="../assets/galean_s_8000_serramenti_in_pvc_3.jpg" id="ij4wg4"/>
-          <div id="ibb9cc">PRODOTTO 3<br/></div>
-          <div id="ig10jk">da 222€/mq</div>
-          <div id="i10trk">Categoria 1</div><button type="button" id="if9qku">SCOPRI DI PIU'</button>
-        </div>
-      </div>
-      <div class="gjs-grid-row" id="ik7cnj">
-        <div class="gjs-grid-column" id="ich2vj"><img src="../assets/galean_s_8000_serramenti_in_pvc_3.jpg" id="iq2ysi"/>
+      
+      <div class="yas1" id="ik7cnj">
+        <div class="xas1" id="ich2vj"><img src="../assets/galean_s_8000_serramenti_in_pvc_3.jpg" id="iq2ysi"/>
           <div id="ib3i1j">PRODOTTO 4<br/></div>
           <div id="if8kf6">da 222€/mq</div>
-          <div id="isej37">Categoria 1</div><button type="button" id="izvf8k">SCOPRI DI PIU'</button>
+          <div id="isej37">Categoria 1</div><button type="button" id="izvf8k" class="tab">SCOPRI DI PIU'</button>
         </div>
-        <div class="gjs-grid-column" id="iru5ru"><img src="../assets/galean_s_8000_serramenti_in_pvc_3.jpg" id="iv2x0v"/>
+        <div class="xas1" id="iru5ru"><img src="../assets/galean_s_8000_serramenti_in_pvc_3.jpg" id="iv2x0v"/>
           <div id="ive71k">PRODOTTO 5<br/></div>
           <div id="iq47ik">da 222€/mq</div>
-          <div id="i85fu2">Categoria 1</div><button type="button" id="ivjy9g">SCOPRI DI PIU'</button>
+          <div id="i85fu2">Categoria 1</div><button type="button" id="ivjy9g" class="tab">SCOPRI DI PIU'</button>
         </div>
-        <div class="gjs-grid-column" id="istrvk"><img src="../assets/galean_s_8000_serramenti_in_pvc_3.jpg" id="ia91b3"/>
+        <div class="xas1" id="istrvk"><img src="../assets/galean_s_8000_serramenti_in_pvc_3.jpg" id="ia91b3"/>
           <div id="ingp2j">PRODOTTO 6<br/></div>
           <div id="i04gv3">da 222€/mq</div>
-          <div id="ilncvh">Categoria 1</div><button type="button" id="iyvo4j">SCOPRI DI PIU'</button>
+          <div id="ilncvh">Categoria 1</div><button type="button" id="iyvo4j" class="tab">SCOPRI DI PIU'</button>
         </div>
       </div>
+
+      <div class="yas1" id="ik7cnj">
+        <div class="xas1" id="ich2vj"><img src="../assets/galean_s_8000_serramenti_in_pvc_3.jpg" id="iq2ysi"/>
+          <div id="ib3i1j">PRODOTTO 4<br/></div>
+          <div id="if8kf6">da 222€/mq</div>
+          <div id="isej37">Categoria 1</div><button type="button" id="izvf8k" class="tab">SCOPRI DI PIU'</button>
+        </div>
+        <div class="xas1" id="iru5ru"><img src="../assets/galean_s_8000_serramenti_in_pvc_3.jpg" id="iv2x0v"/>
+          <div id="ive71k">PRODOTTO 5<br/></div>
+          <div id="iq47ik">da 222€/mq</div>
+          <div id="i85fu2">Categoria 1</div><button type="button" id="ivjy9g" class="tab">SCOPRI DI PIU'</button>
+        </div>
+        <div class="xas1" id="istrvk"><img src="../assets/galean_s_8000_serramenti_in_pvc_3.jpg" id="ia91b3"/>
+          <div id="ingp2j">PRODOTTO 6<br/></div>
+          <div id="i04gv3">da 222€/mq</div>
+          <div id="ilncvh">Categoria 1</div><button type="button" id="iyvo4j" class="tab">SCOPRI DI PIU'</button>
+        </div>
+      </div>
+
     </div>
+    
   </section>
   <div class="gjs-grid-row" id="il97u4">
     <div class="gjs-grid-column" id="ilym3k">
