--- a/prodotti/opzione_6.html
+++ b/prodotti/opzione_6.html
@@ -22,14 +22,14 @@
               <div class="dropdown">
                 <a href="#" class="gjs-link" id="itiwuq">Prodotti</a>
                 <div class="dropdown-content">
-                  <a href="./prodotti/opzione_1.html">Serramenti PVC</a>
-                  <a href="./prodotti/opzione_2.html">Serramenti in Legno</a>
-                  <a href="./prodotti/opzione_3.html">Serramenti Alluminio</a>
-                  <a href="./prodotti/opzione_4.html">Avvolgibili</a>
-                  <a href="./prodotti/opzione_5.html">Porte Interne</a>
-                  <a href="./prodotti/opzione_6.html">Porte Blindate</a>
-                  <a href="./prodotti/opzione_7.html">Zanzariere</a>
-                  <a href="./prodotti/opzione_8.html">Persiane</a>
+                  <a href="./opzione_1.html">Serramenti PVC</a>
+                  <a href="./opzione_2.html">Serramenti in Legno</a>
+                  <a href="./opzione_3.html">Serramenti Alluminio</a>
+                  <a href="./opzione_4.html">Avvolgibili</a>
+                  <a href="./opzione_5.html">Porte Interne</a>
+                  <a href="./opzione_6.html">Porte Blindate</a>
+                  <a href="./opzione_7.html">Zanzariere</a>
+                  <a href="./opzione_8.html">Persiane</a>
                 </div>
               </div>
               <a id="iqdbl8" href="../chi-siamo.html" class="gjs-link">Chi Siamo</a>
