--- a/chi-siamo.html
+++ b/chi-siamo.html
@@ -44,24 +44,33 @@
       <div id="ibzxv4">
         <h1 id="it6rui" class="gjs-heading">Chi Siamo<br /></h1>
       </div>
-      <div id="if8tw6" class="gjs-divider"></div><span id="iayplw">
-        <p id="iysl6r">Siamo <strong id="isi205">specializzati nella produzione e vendita di serramenti in PVC e
-            alluminio di alta qualità</strong> e siamo orgogliosi di offrire ai nostri clienti una vasta gamma di
-          prodotti dalle <strong id="ih149k">caratteristiche tecniche eccellenti</strong>, progettati per
-          garantire <strong>comfort</strong>, <strong id="imzp31">sicurezza </strong>e <strong>risparmio
-            energetico</strong>.</p>
+      <div id="if8tw6" class="gjs-divider"></div>
+      <span id="iayplw">
+          <p id="iysl6r">
+              Offriamo una vasta selezione di serramenti in PVC e alluminio, realizzati con materiali di alta qualità. 
+              I nostri prodotti si distinguono per le loro <strong>prestazioni tecniche avanzate</strong>, pensati per 
+              offrire <strong>comfort</strong>, <strong>sicurezza</strong> e un significativo <strong>risparmio energetico</strong>. 
+              La nostra missione è soddisfare le esigenze dei clienti con soluzioni affidabili e durature.
+          </p>
       </span>
       <div id="ieqpn4" class="gjs-divider"></div>
       <div id="i5yz32" class="gjs-grid-row">
         <div class="gjs-grid-column">
             <img id="ikh7pu" src="assets/chisiamo.png" alt="Chi siamo" />
         </div>
-        <div id="icu1hs" class="gjs-grid-column">
-            <div id="iff3a9">
-                <p id="i6l9dg" draggable="true">La nostra azienda nasce dalla <strong>passione</strong> e dall’<strong>esperienza</strong> di un team di professionisti del settore, uniti con l’obiettivo di offrire serramenti che soddisfino le esigenze sia dei clienti <strong>privati</strong> che delle <strong>aziende</strong>. Grazie all’impiego di <strong>tecnologie avanzate</strong>, materiali di alta qualità e un servizio <strong>personalizzato</strong>, siamo in grado di garantire la massima <strong>soddisfazione</strong>.</p>
-                <p id="imdt9t" draggable="true" class="gjs-hovered">Ci contraddistingue una cura meticolosa dei <strong>dettagli</strong> e una selezione accurata dei <strong>materiali</strong>, che ci permette di produrre serramenti <strong>resistenti</strong> nel tempo e in grado di affrontare le <strong>intemperie</strong>. La nostra produzione è inoltre conforme alle normative <strong>europee</strong> in materia di <strong>sicurezza</strong> e <strong>sostenibilità ambientale</strong>.</p>
-            </div>
-        </div>
+        <div id="icu1hs" class="gjs-grid-column" style="font-family: 'Verdana', sans-serif; font-size: 1.2rem; line-height: 1.5; text-align: start; color: #1c1b1b;">
+          <div id="iff3a9">
+              <p id="i6l9dg" draggable="true">
+                  La nostra realtà nasce dalla <strong>dedizione</strong> e dall’<strong>esperienza consolidata</strong> di un team di esperti, con l’obiettivo di fornire serramenti che rispondano perfettamente alle necessità dei clienti, sia <strong>privati</strong> che delle <strong>aziende</strong>.
+                  Sfruttiamo <strong>tecnologie moderne</strong> e materiali di alta qualità, abbinati a un servizio <strong>su misura</strong>, per assicurare il massimo livello di <strong>soddisfazione</strong>.
+              </p>
+              <p id="imdt9t" draggable="true" class="gjs-hovered">
+                  La nostra attenzione ai <strong>dettagli</strong> e la cura nella scelta dei <strong>materiali</strong> ci consentono di realizzare serramenti <strong>duraturi</strong> e capaci di resistere alle <strong>intemperie</strong>. 
+                  Ogni fase della nostra produzione rispetta rigorosamente le normative <strong>europee</strong> in materia di <strong>sicurezza</strong> e <strong>sostenibilità</strong>.
+              </p>
+          </div>
+      </div>
+      </div>
     </div>
     </div>
     </div>
