--- a/preventivo.html
+++ b/preventivo.html
@@ -91,7 +91,7 @@
           <div role="tabpanel" id="formAzienda" class="tab-content">
             <form method="get" id="formAziendaForm">
               <div class="form-group">
-                <label for="nomeAzienda">Nome Azienda</label>
+                <label for="nomeAzienda">Azienda</label>
                 <input type="text" id="nomeAzienda" />
               </div>
               <div class="form-group">
